Fix escape characters in description for Ines Garcia's activity

--- a/src/content/champions/ines-garcia.yaml
+++ b/src/content/champions/ines-garcia.yaml
@@ -127,7 +127,7 @@ activities:
     dateTo: 2024-06-13
     title: The Business Case for Sustainability
     subtitle: and debunking top excuses
-    description: "We will delve from the business case for Sustainability (& debunking top excuses) right into the responsibility in shaping efficient, modular and natural-capital aware products and systems. Not just by the mantra of "less is more" (simplifying & optimizing), we’ll explore the myths, perspective and finance. As Agile practitioners we are key placed, let's equip you to tackle those myths of resistance."
+    description: "We will delve from the business case for Sustainability (& debunking top excuses) right into the responsibility in shaping efficient, modular and natural-capital aware products and systems. Not just by the mantra of \"less is more\" (simplifying & optimizing), we’ll explore the myths, perspective and finance. As Agile practitioners we are key placed, let's equip you to tackle those myths of resistance."
     url: https://www.agilists4planet.com/ines-garcia-2024
     relatedEvent: Agilists4Planet
   - contributionType: speaking
