--- a/src/content/champions/ko-turk.yaml
+++ b/src/content/champions/ko-turk.yaml
@@ -38,7 +38,7 @@ activities:
      We will demonstrate Kepler, a tool for measuring power efficiency in applications, helping developers optimize their impact.
 
      Harnessing NASA’s data, we took steps toward a more sustainable digital future, one line of code at a time! 🌱💡"
-    url: jnation.pt
+    url: https://jnation.pt/
   - contributionType: organizing
     linkedGSFProject: State of Green Software
     subtype: other
