--- a/src/content/champions/rut-palmero.yaml
+++ b/src/content/champions/rut-palmero.yaml
@@ -1,6 +1,7 @@
 firstName: Rut
 lastName: Palmero
 role: Project Manager and Technical support
+organization: Universidad Internacional de La Rioja
 languages: 
   - Spanish
   - English
