--- a/src/content/champions/vasco-veloso.yaml
+++ b/src/content/champions/vasco-veloso.yaml
@@ -27,6 +27,15 @@ activities:
   - contributionType: speaking
     linkedGSFProject: Community WG
     subtype: conference-talk
+    dateFrom: 2025-05-27
+    dateTo: 2025-05-27
+    title: "Going green with native: efficient, sustainable software"
+    description: A talk explaining why green software is important, which software design patterns can be easily applied today to help reducing emissions, and a demo of how native compilation has the potential to lower Java applications' footprints.
+    url: https://youtu.be/KmXsNzfKVlc?si=P8QxWk5VNcn7NrzW
+    relatedEvent: JNation 2025
+  - contributionType: speaking
+    linkedGSFProject: Community WG
+    subtype: conference-talk
     dateFrom: 2025-02-28
     dateTo: 2025-02-28
     title: "Going green with native: efficient, sustainable software"
