--- a/src/content/champions/arne-tarara.yaml
+++ b/src/content/champions/arne-tarara.yaml
@@ -18,6 +18,16 @@ social:
 activities:
   - contributionType: speaking
     linkedGSFProject: Community WG
+    subtype: conference-talk
+    dateFrom: 2025-07-03
+    dateTo: 2025-07-03
+    title: Green IO Talk
+    subtitle: Practical Approaches to Measuring Software Sustainability via Tooling and Eco Labels
+    description: This talk covers why and how to measure software energy use—for understanding, tracking, optimizing, and reporting. It compares SCI and Blue Angel for Software, explores alternative methods (e.g., ISO 14001, web metrics), and introduces the Green Metrics Tool. Real-world examples, including work with Nextcloud, illustrate the data, time, and setup needed for certification. Website measurement and the large differences in their energy use are also discussed.
+    url: https://www.green-coding.io/talks-and-events/green_io_2025_07_03/
+    relatedEvent: Green IO Conference Munich 2025
+  - contributionType: speaking
+    linkedGSFProject: Community WG
     subtype: online-demo
     dateFrom: 2025-05-27
     dateTo: 2025-05-27
